syntax = "proto3";

package monopoly;
option csharp_namespace = "Monopoly.Protobuf";

import "monopoly/game_player.proto";

// type : "get_initial_state"
// packet_type : RESPONSE
message GetInitialStateResponse {
  repeated GamePlayer players = 1;
  string first_player_id = 2;
}